<resources>
    <string name="app_name">BBC News Reader</string>
    <string name="button_headlines">Latest News Headlines</string>
    <string name="button_favourites">Favourites</string>
    <string name="what_is_name">What is your name?</string>
    <string name="favourites">Favourite Articles</string>
    <string name="headlines">Latest News Headlines</string>
    <string name="help_title1">Help!</string>
    <string name="help_dialog1">Select Latest News Headlines to see the latest headlines from BBC News! Select the Favourites Button to see your favourite articles! The toolbar at the top of the screen can be used to browse the application pages.</string>
    <string name="help_dialog2">Choose a News Article from the List. Selecting an Article will display Title, Description, Publish Date, and a Link to the website.</string>
    <string name="help_dialog3">Your favourite News articles are saved here. Select an article from the list to view it or delete it from your favourites.</string>
    <string name="help_dialog4">The application will save your preferences here. Please enter your name to personalize the greetings!</string>
    <string name="help_dialog5">Select Go To Site to visit the web page. Select Back to go back to the articles page. Select Save To Favourites to save the article to your favourites list.</string>
    <string name="choice_home">You chose Home</string>
    <string name="choice_articles">You chose Articles</string>
    <string name="choice_favourites">You chose Favourites</string>
    <string name="choice_pref">You chose Preferences</string>
    <string name="languages">Choose your preferred language.</string>
    <string name="save">Save</string>
    <string name="empty">Please enter a valid name.</string>
    <string name="welcome">Welcome,\u0020</string>
    <string name="title">Title:\u0020</string>
    <string name="desc">Description:\u0020</string>
    <string name="date">Date:\u0020</string>
    <string name="link">Link:\u0020</string>
    <string name="goTo">Go to site</string>
    <string name="backTo">Back</string>
    <string name="saveTo">Save to Favorites</string>
    <string name="savedTo">Saved to Favorites</string>
    <string name="snackHome">You are already Home!</string>
    <string name="snackArticle">You are already at Articles!</string>
    <string name="snackFavourites">You are already at Favourites!</string>
    <string name="snackPreferences">You are already at Preferences!</string>
    <string name="slash">/</string>
    <string name="space">\u0020</string>
    <string name="open">Open navigation drawer.</string>
    <string name="close">Close navigation drawer</string>
</resources>