<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/welcome"
            android:textSize="20dp">

        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button_headlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="95dp"
        android:text="@string/button_headlines">

    </Button>

    <Button
        android:id="@+id/button_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:gravity="center_vertical"

        android:text="@string/button_favourites">

    </Button>

    <ImageButton
        android:id="@+id/help_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:src="@drawable/question">

    </ImageButton>

    <TextView
        android:id="@+id/snackView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>




</androidx.appcompat.widget.LinearLayoutCompat>

